# VGArchive

./: .gitignore  CMakeLists.txt  README.md  VGArchive  fetch_games.py  main.cpp
data/: init_db.sql  video_game_archive.db
src/: fetch_games.py
